<resources>
    <string name="app_name">FreeFallingDetector</string>
    <string name="fall_id">Fall Id</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End time</string>
    <string name="duration">Duration (ms)</string>
    <string name="total_z">Total Z value</string>
    <string name="total_gravity_z">Total gravity Z</string>
    <string name="total_acceleration_z">Total acceleration Z</string>
</resources>
